--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <main>
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button>Order Service</button>
+            <button type="button">Order Service</button>
         </section>
 
         <section>
-            <!--<h2>About our Company</h2>-->
+            <h2 hidden>About our Company</h2>
 
             <ul>
                 <li>
@@ -58,17 +58,47 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img width="360" height="300" src="./images/photo-1.png" alt="photo-1"></li>
-                <li><img width="360" height="300" src="./images/photo-2.png" alt="photo-2"></li>
-                <li><img width="360" height="300" src="./images/photo-3.png" alt="photo-3"></li>
+                <li><img width="360" height="300" src="./images/desktop.jpg" alt="desktop"></li>
+                <li><img width="360" height="300" src="./images/mobile.jpg" alt="mobile"></li>
+                <li><img width="360" height="300" src="./images/platform.jpg" alt="platform"></li>
             </ul> 
 
+        </section>
+
+        <section>
+            <h2>Our Team</h2>
+                <ul>
+                    <li>
+                        <img src="./images/mark.jpg" alt="Mark" width="264" height="260">
+                        <h3>Mark Guerrero</h3>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./images/tom.jpg" alt="Tom" width="264" height="260">
+                        <h3>Tom Ford</h3>
+                        <p></p>
+                    </li>
+                    <li>
+                        <img src="./images/camila.jpg" alt="Camila" width="264" height="260">
+                        <h3>Camila Garcia</h3>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./images/daniel.jpg" alt="Daniel" width="264" height="260">
+                        <h3>Daniel Wilson</h3>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
         </section>
 
     </main>
 
     <footer>
-
+        <section>
+            <h2 hidden>Customers</h2>
+            <a href="/">WEBSTUDIO</a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </section>
     </footer>
     
 </body>
